[package]
name = "CICD_TBD"
version = "0.0.1"
edition = "2021"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "CICD_TBD"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
pyo3 = { version = "0.19.0", features = ["extension-module", "chrono"] }
pyo3-asyncio = { version = "0.19", features = ["tokio-runtime"] }
tokio = "1.9"


config = "0.14.0"
redis = "0.25.3"
lazy_static="*"
uuid={ version="*", features=[ "v4"]}
serde={version="*", features=["derive"]}
serde_json="*"

